<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="fontSize"
        android:title="@string/Fontstyle"
        android:summary="@string/Setsthefontstyle"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="@string/Chooseafontstyle" />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/Selectalanguage"
        android:entries="@array/text_lang"
        android:entryValues="@array/text_lang_value"
        android:key="test_lang"
        android:summary="@string/Languageintheapp"
        android:title="@string/Language" />

    <SwitchPreference
        android:key="theme"
        android:summaryOff="@string/Nighttheme"
        android:summaryOn="@string/Nighttheme"
        android:switchTextOff="@string/Turnon"
        android:switchTextOn="@string/Turnoff" />

    <Preference
        android:title="@string/Delete"
        android:key="DeleteAll"
        android:summary="@string/DeleteAll" />

</PreferenceScreen>