<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:label="@string/app_name"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorText" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            android:background="@color/colorBack">

            <TextView
                android:id="@+id/trainingStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:gravity="center_horizontal"
                android:text="@string/step"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/trainingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:gravity="center_horizontal"
                android:text="@string/Time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnStartStop"
                    android:layout_width="88dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="20dp"/>
                <!--android:background="@drawable/start_sign"-->

            </LinearLayout>

            <ListView
                android:id="@+id/listTraining"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:background="@color/colorAccent"
                android:scrollbarSize="3dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:scrollingCache="true"
                android:smoothScrollbar="true"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>