<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="timerViewModel"
            type="com.example.tabatatimer.viewmodels.TimerViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack"
        android:clickable="false"
        tools:context=".CreateTimer">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:label="@string/app_name"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorText" >

        </androidx.appcompat.widget.Toolbar>





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="-2dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">


                <TextView
                    android:id="@+id/textViewTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Training"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="center"

                    android:textColor="?attr/colorPrimary" />

<!-- -->
                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:textAllCaps="false"
                    android:theme="@style/AppTheme"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHighlight="@color/colorBack"
                    android:textColorHint="?attr/colorPrimary"
                    android:textColorLink="@color/colorBack"
                    android:textCursorDrawable="?attr/colorPrimaryDark" />


                <TextView
                    android:id="@+id/textViewPrep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Prepair"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:theme="@style/AppTheme"
                    android:textColor="?attr/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/first" />

                    <EditText
                        android:id="@+id/inputPrep"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/Prepair"
                        android:textColorHint="@color/colorText"
                        android:inputType="number"
                        android:padding="15dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="100dp"
                        android:textColor="@color/colorText"
                        android:background="@drawable/custom_input"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Work"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="#fa2255"
                        android:src="@drawable/second" />
                    <EditText
                        android:id="@+id/inputWork"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/Work"
                        android:textColorHint="@color/colorText"
                        android:inputType="number"
                        android:padding="15dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="100dp"
                        android:textColor="@color/colorText"
                        android:background="@drawable/custom_input"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Calm"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/meditation" />
                    <EditText
                        android:id="@+id/inputRest"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/Calm"
                        android:textColorHint="@color/colorText"
                        android:inputType="number"
                        android:padding="15dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="100dp"
                        android:textColor="@color/colorText"
                        android:background="@drawable/custom_input"
                        />
                </LinearLayout>



                <TextView
                    android:id="@+id/textSetRest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Set"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/icon5"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/time" />
                    <EditText
                        android:id="@+id/inputSet"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/Set"
                        android:textColorHint="@color/colorText"
                        android:inputType="number"
                        android:padding="15dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="100dp"
                        android:textColor="@color/colorText"
                        android:background="@drawable/custom_input"
                        />
                </LinearLayout>


                <TextView
                    android:id="@+id/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Цвет"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorBack" />

                <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                    android:id="@+id/colorSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:hslColoringMode="pure"
                    app:hslMode="hue"
                    />


                <!--      <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                        android:id="@+id/color_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hslColoringMode="pure"
                        app:hslMode="hue"
                        />-->

                    <!--            <com.divyanshu.colorseekbar.ColorSeekBar-->
                <!--                android:id="@+id/color_seek_bar"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_margin="16dp"-->
                <!--                tools:ignore="MissingClass" />-->

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:textAlignment="center">



                    <ImageButton
                        android:id="@+id/submit"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginStart="270dp"
                        android:text="@string/Save"
                        android:background="@drawable/delete_button_background"
                        android:src="@drawable/ic_save_button"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>